--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,23 @@ body {
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+/* Pages */
+/* Home */
+.home_container-position {
+	align-items: center;
+	display: flex;
+	height: 100vh;
+	justify-content: center;
+}
+
+.home_container {
+	align-items: center;
+	border-radius: 5px;
+	border: 1px solid white;
+	display: flex;
+	flex-direction: column;
+	height: 150px;
+	justify-content: space-around;
+	width: 200px;
+}
