--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ code {
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
-	/* justify-content: center; */
 }
 
 .home_app-name {
@@ -44,15 +43,6 @@ code {
 	margin-bottom: 10px;
 	gap: 11px;
 }
-.blink_me {
-	animation: blinker 1s linear infinite;
-}
-
-@keyframes blinker {
-	50% {
-		opacity: 0;
-	}
-}
 
 .home_mouse-left-button {
 	text-decoration: none;
@@ -76,11 +66,6 @@ code {
 		opacity: 0;
 	}
 }
-
-/* .home_mouse-left-button:active {
-	transform: scale(0.98);
-	box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
-} */
 
 .home_mouse-right-button {
 	text-decoration: none;
@@ -106,8 +91,7 @@ code {
 }
 
 .game_container-header {
-	background-color: dimgray;
-	border: 1px solid hwite;
+	border-bottom: 1px solid white;
 	height: 50px;
 	display: flex;
 	flex-direction: row;
@@ -119,18 +103,42 @@ code {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
 	height: 100vh;
 }
-.game_container-header-link {
+
+.game_container_body-text-your-score {
+	font-size: 100px;
+	margin: 50px 0;
+}
+
+.game_container_body-text-autoclickers-bought {
+	font-size: 50px;
+	margin: 0 0 50px 0;
+}
+
+.game_container_header-link {
 	text-decoration: none;
 	color: white;
 }
-.game_container-body-scores {
+
+.game_container_body-text-scores {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin-top: 30px;
+}
+
+.game_container_body-button-add-point {
+	width: 300px;
+	margin: 10px 0;
+	padding: 10px 0px;
+}
+
+.game_container_body-button-buy-autoclicker {
+	width: 300px;
+	margin: 10px 0;
+	padding: 10px 0px;
 }
 
 /* Components */
